--- a/index-dark-2.html
+++ b/index-dark-2.html
@@ -751,40 +751,47 @@
                 <h5 class="s2">Easy Steps</h5>
                 <h2>How It Works</h2>
                 <p class="lead">
-                  Sit labore et officia eiusmod tempor officia eiusmod dolor
-                  exercitation nulla dolore ut id velit et ut anim.
+                  Don't let slow hosting services cost you valuable clients. Choose our hosting and domain solutions to provide a 
+                  seamless experience for your website visitors. Start by selecting a plan, choosing a domain, logging in or 
+                  registering, and making the payment. Let us take care of your hosting needs so you can focus on growing your 
+                  business. Get started now and unlock the potential of your online presence.
                 </p>
                 <div class="spacer-20"></div>
               </div>
-              <div class="col-md-12 wow fadeInUp">
+              <div class="col-md-12 wow fadeInUp text-center" >
                 <div class="container-timeline">
                   <ul>
                     <li>
                       <h4>Select Plan</h4>
                       <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore
+                        Start by browsing through the hosting plans available on our website. We offer a range of packages tailored to 
+                        meet the specific needs of your business. Consider factors such as storage space, bandwidth, and additional 
+                        features to find the plan that best suits your requirements.
                       </p>
                     </li>
                     <li>
                       <h4>Choose Domain</h4>
                       <p>
-                        Duis aute irure dolor in reprehenderit in voluptate
-                        velit esse cillum dolore eu fugiat nulla
+                        Once you've selected a hosting plan, it's time to choose a domain name for your website. A domain name is the 
+                        address that people will use to access your site (e.g., www.yourbusiness.com). You can search for available 
+                        domain names using our domain registration service. Select a domain that represents your brand and is easy 
+                        for your customers to remember.
                       </p>
                     </li>
                     <li>
                       <h4>Login/Register</h4>
                       <p>
-                        Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo
+                        To proceed with your purchase, you'll need to create an account on our hosting website. If you're a new user, 
+                        click on the registration link and provide the required information, including your name, email address, and 
+                        password. If you're an existing customer, simply log in to your account.
                       </p>
                     </li>
                     <li>
                       <h4>Make Payment</h4>
                       <p>
-                        Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo
+                        Once you're logged in, you'll be directed to the payment page. Here, you can securely enter your payment 
+                        details to complete the transaction. We support various payment methods, including credit/debit cards,
+                        PayPal, and other popular options. Rest assured that our payment process is safe and protected.
                       </p>
                     </li>
                   </ul>
@@ -875,8 +882,7 @@
                   <span class="id-color">worldwide</span>
                 </h2>
                 <p class="lead">
-                  Sit labore et officia eiusmod tempor officia eiusmod dolor
-                  exercitation nulla dolore ut id velit et ut anim.
+                  We've never disappointed our user and below are what our service users are saying about their experience with us
                 </p>
                 <div class="spacer-20"></div>
               </div>
@@ -886,7 +892,7 @@
                 <div class="item">
                   <div class="de_testi type-2">
                     <blockquote>
-                      <h4>Excellent Hosting</h4>
+                      <h4>Excellent Support</h4>
                       <p>
                         Great support, like i have never seen before. Thanks to
                         the support team, they are very helpfull. This company
@@ -905,11 +911,10 @@
                 <div class="item">
                   <div class="de_testi type-2">
                     <blockquote>
-                      <h4>Excellent Hosting</h4>
+                      <h4>Secuirty</h4>
                       <p>
-                        Great support, like i have never seen before. Thanks to
-                        the support team, they are very helpfull. This company
-                        provide customers great solution, that makes them best.
+                        Security is a top priority for my business, and I'm glad I found BlumintHost hosting. They provide robust security features, 
+                        including SSL certificates and regular backups, giving me peace of mind knowing that my data is protected. Highly reliable!
                       </p>
                       <div class="de_testi_by">
                         <img
@@ -924,11 +929,10 @@
                 <div class="item">
                   <div class="de_testi type-2">
                     <blockquote>
-                      <h4>Excellent Hosting</h4>
+                      <h4>Excellent Interface</h4>
                       <p>
-                        Great support, like i have never seen before. Thanks to
-                        the support team, they are very helpfull. This company
-                        provide customers great solution, that makes them best.
+                        I'm not tech-savvy, but the user-friendly interface of BlumintHost made it easy for me to set up and manage my website. 
+                        The control panel is intuitive, and I appreciate the simplicity it offers. A great option for beginners!
                       </p>
                       <div class="de_testi_by">
                         <img
@@ -943,11 +947,11 @@
                 <div class="item">
                   <div class="de_testi type-2">
                     <blockquote>
-                      <h4>Excellent Hosting</h4>
+                      <h4>Easy Choice</h4>
                       <p>
-                        Great support, like i have never seen before. Thanks to
-                        the support team, they are very helpfull. This company
-                        provide customers great solution, that makes them best.
+                        The variety of hosting plans offered by BlumintHost allowed me to find the perfect fit for my growing online store. 
+                        The scalability and reliability of their hosting services have helped me handle increased traffic and sales without a hitch. 
+                        Truly top-notch
                       </p>
                       <div class="de_testi_by">
                         <img
@@ -964,9 +968,8 @@
                     <blockquote>
                       <h4>Excellent Hosting</h4>
                       <p>
-                        Great support, like i have never seen before. Thanks to
-                        the support team, they are very helpfull. This company
-                        provide customers great solution, that makes them best.
+                        I switched to BlumintHost after experiencing slow loading times and frequent crashes with my previous provider. 
+                        Since making the switch, my website has been lightning fast, and I haven't encountered any technical issues. I'm impressed!
                       </p>
                       <div class="de_testi_by">
                         <img
@@ -981,11 +984,10 @@
                 <div class="item">
                   <div class="de_testi type-2">
                     <blockquote>
-                      <h4>Excellent Hosting</h4>
+                      <h4>Fast Hosting</h4>
                       <p>
-                        Great support, like i have never seen before. Thanks to
-                        the support team, they are very helpfull. This company
-                        provide customers great solution, that makes them best.
+                        I switched to BlumintHost hosting after experiencing slow loading times and frequent crashes with my previous provider. 
+                        Since making the switch, my website has been lightning fast, and I haven't encountered any technical issues. I'm impressed!
                       </p>
                       <div class="de_testi_by">
                         <img
@@ -1000,11 +1002,10 @@
                 <div class="item">
                   <div class="de_testi type-2">
                     <blockquote>
-                      <h4>Excellent Hosting</h4>
+                      <h4>Excellent Support</h4>
                       <p>
-                        Great support, like i have never seen before. Thanks to
-                        the support team, they are very helpfull. This company
-                        provide customers great solution, that makes them best.
+                        The customer support provided by BlumintHost hosting is outstanding. Whenever I had an issue or a question, their team was quick 
+                        to respond and resolved my concerns effectively. It's great to know that they have my back.
                       </p>
                       <div class="de_testi_by">
                         <img
@@ -1021,9 +1022,9 @@
                     <blockquote>
                       <h4>Excellent Hosting</h4>
                       <p>
-                        Great support, like i have never seen before. Thanks to
-                        the support team, they are very helpfull. This company
-                        provide customers great solution, that makes them best.
+                        Since I've been using BlumintHost hosting for my business, 
+                        and I couldn't be happier. The performance of my website has improved 
+                        significantly, and I haven't experienced any downtime. Highly recommended!
                       </p>
                       <div class="de_testi_by">
                         <img
