--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                   name="form_sb">
                   <div class="col">
                     <div class="spacer-10"></div>
-                    <input class="form-control" id='domain_name' name='domain_name' placeholder="enter domain name" type='text'> <a id="btn-submit" href="javascript:;" onclick="document.getElementById('form_sb').submit();"><i class="arrow_right"></i></a>
+                    <input class="form-control" id='domain_name' name='domain_name' placeholder="Enter domain name" type='text'> <a id="btn-submit" href="javascript:;" onclick="document.getElementById('form_sb').submit();"><i class="arrow_right"></i></a>
                     <div class="clearfix"></div>
                     <div class="spacer-10"></div>
                     <div class="domain-ext pos-left">
@@ -686,8 +686,7 @@
                   <h5 class="s2">Discover</h5>
                   <h2>Server Locations</h2>
                   <p class="lead">
-                    Sit labore et officia eiusmod tempor officia eiusmod dolor
-                    exercitation nulla dolore ut id velit et ut anim.
+                    Unlock the power of global connectivity with our strategically positioned server locations.
                   </p>
                   <div class="spacer-20"></div>
                 </div>
@@ -1043,7 +1042,7 @@
                       class="form-control"
                       id="txt_subscribe"
                       name="txt_subscribe"
-                      placeholder="enter your email"
+                      placeholder="Enter your email"
                       type="text" />
                     <a href="#" id="btn-subscribe"
                       ><i class="arrow_right bg-color-secondary"></i
