--- a/shared-hosting.html
+++ b/shared-hosting.html
@@ -498,32 +498,32 @@
                 <i class="icon-alarmclock de-icon mb20"></i>
                 <h4>Instant Activation</h4>
                 <p>
-                  Aliquip consequat excepteur non dolor irure ad irure labore ex
-                  eiusmod est duis culpa ex ut minim ut ea.
+                  Enjoy rapid deployment with 'Instant Activation.' Sign up, and within 
+                  seconds, your hosting services are ready for immediate use.
                 </p>
               </div>
               <div class="col-md-3">
                 <i class="icon-refresh de-icon mb20"></i>
                 <h4>99.99% Server Uptime</h4>
                 <p>
-                  Aliquip consequat excepteur non dolor irure ad irure labore ex
-                  eiusmod est duis culpa ex ut minim ut ea.
+                  Count on us for unwavering reliability with our 99.99% server uptime 
+                  guarantee. Your online presence deserves nothing less than consistent accessibility.
                 </p>
               </div>
               <div class="col-md-3">
                 <i class="icon-layers de-icon mb20"></i>
                 <h4>Multiple Data Centers</h4>
                 <p>
-                  Aliquip consequat excepteur non dolor irure ad irure labore ex
-                  eiusmod est duis culpa ex ut minim ut ea.
+                  Our multiple data centers provide you with unparalleled reliability 
+                  and performance. Your data is securely housed across strategic locations for optimal speed and redundancy.
                 </p>
               </div>
               <div class="col-md-3">
                 <i class="icon-cloud de-icon mb20"></i>
                 <h4>Daily Data Backup</h4>
                 <p>
-                  Aliquip consequat excepteur non dolor irure ad irure labore ex
-                  eiusmod est duis culpa ex ut minim ut ea.
+                  Rest easy knowing your data is safe with our daily data backup. We've 
+                  got your back, ensuring your precious information is secure and easily recoverable.
                 </p>
               </div>
             </div>
@@ -553,7 +553,7 @@
                     </div>
                     <h4>Excellent Hosting Service!</h4>
                     <blockquote>
-                      I have been using Hostco for my web hosting needs for over
+                      I have been using BlumintHost for my web hosting needs for over
                       5 years now. I have never had any problems with their
                       service. Their customer support is always responsive and
                       helpful. I would recommend Hostco to anyone looking for a
@@ -577,7 +577,7 @@
                     </div>
                     <h4>Excellent Hosting Service!</h4>
                     <blockquote>
-                      We have been using Hostco for our web hosting needs for
+                      We have been using BlumintHost for our web hosting needs for
                       several years now and have always been happy with their
                       service. Their customer support is excellent and they are
                       always available to help with any issues we have. Their
@@ -601,7 +601,7 @@
                     </div>
                     <h4>Excellent Hosting Service!</h4>
                     <blockquote>
-                      Endorsed by industry experts, Hostco is the web hosting
+                      Endorsed by industry experts, BlumintHost is the web hosting
                       solution you can trust. With years of experience in the
                       field, we provide fast, reliable and secure web hosting
                       services.
@@ -630,49 +630,36 @@
                     <div
                       class="accordion-section-title"
                       data-tab="#accordion-1">
-                      How do I get started with web hosting?
+                      Do I need a domain name and web hosting with you to use the Website Builder?
                     </div>
                     <div class="accordion-section-content" id="accordion-1">
                       <p>
-                        At vero eos et accusamus et iusto odio dignissimos
-                        ducimus qui blanditiis praesentium voluptatum deleniti
-                        atque corrupti quos dolores et quas molestias excepturi
-                        sint occaecati cupiditate non provident, similique sunt
-                        in culpa qui officia deserunt mollitia animi, id est
-                        laborum et dolorum fuga. Et harum quidem rerum facilis
-                        est et expedita distinctio.
+                        Yes, you’ll need to purchase a web hosting package from us if you don’t already 
+                        have one. You also need a domain name; we recommend registering or transferring 
+                        your domain to us where possible for a seamless experience.
+                        Take a look at our Web Hosting and Domain Names pages for more details.
                       </p>
                     </div>
                     <div
                       class="accordion-section-title"
                       data-tab="#accordion-2">
-                      What is difference for each plan?
+                      How do I access the Website Builder?
                     </div>
                     <div class="accordion-section-content" id="accordion-2">
                       <p>
-                        At vero eos et accusamus et iusto odio dignissimos
-                        ducimus qui blanditiis praesentium voluptatum deleniti
-                        atque corrupti quos dolores et quas molestias excepturi
-                        sint occaecati cupiditate non provident, similique sunt
-                        in culpa qui officia deserunt mollitia animi, id est
-                        laborum et dolorum fuga. Et harum quidem rerum facilis
-                        est et expedita distinctio.
+                        Once you’ve purchased a hosting package, log in to your control panel and go 
+                        to ‘Web Builder’. From here you can access everything you need to build your 
+                        website.
                       </p>
                     </div>
                     <div
                       class="accordion-section-title"
                       data-tab="#accordion-3">
-                      What kind of web hosting do I need?
+                      Can I back up my website?
                     </div>
                     <div class="accordion-section-content" id="accordion-3">
                       <p>
-                        At vero eos et accusamus et iusto odio dignissimos
-                        ducimus qui blanditiis praesentium voluptatum deleniti
-                        atque corrupti quos dolores et quas molestias excepturi
-                        sint occaecati cupiditate non provident, similique sunt
-                        in culpa qui officia deserunt mollitia animi, id est
-                        laborum et dolorum fuga. Et harum quidem rerum facilis
-                        est et expedita distinctio.
+                        You can download backups of your website whenever you like straight from your control panel.
                       </p>
                     </div>
                   </div>
@@ -689,45 +676,38 @@
                     </div>
                     <div class="accordion-section-content" id="accordion-b-4">
                       <p>
-                        At vero eos et accusamus et iusto odio dignissimos
-                        ducimus qui blanditiis praesentium voluptatum deleniti
-                        atque corrupti quos dolores et quas molestias excepturi
-                        sint occaecati cupiditate non provident, similique sunt
-                        in culpa qui officia deserunt mollitia animi, id est
-                        laborum et dolorum fuga. Et harum quidem rerum facilis
-                        est et expedita distinctio.
+                        A domain name serves as your unique online address, making it easier 
+                        for visitors to find and remember your website. It adds professionalism 
+                        to your online presence and helps establish your brand identity. 
+                        Without a domain, your website would be identified by a lengthy and 
+                        complex IP address, making it less user-friendly and memorable. 
+                        In short, a domain name is essential for creating a credible and 
+                        accessible online presence for your website or business.
                       </p>
                     </div>
                     <div
                       class="accordion-section-title"
                       data-tab="#accordion-b-5">
-                      What my website protected from hackers?
+                      Do I need to know how to code to use the Website Builder?
                     </div>
                     <div class="accordion-section-content" id="accordion-b-5">
                       <p>
-                        At vero eos et accusamus et iusto odio dignissimos
-                        ducimus qui blanditiis praesentium voluptatum deleniti
-                        atque corrupti quos dolores et quas molestias excepturi
-                        sint occaecati cupiditate non provident, similique sunt
-                        in culpa qui officia deserunt mollitia animi, id est
-                        laborum et dolorum fuga. Et harum quidem rerum facilis
-                        est et expedita distinctio.
+                        Not at all; everything is drag-and-drop or easily editable in a 
+                        few clicks. If you’re comfortable with HTML, CSS, and/or JavaScript, 
+                        you can edit and add code as you wish - but that’s completely optional.
                       </p>
                     </div>
                     <div
                       class="accordion-section-title"
                       data-tab="#accordion-b-6">
-                      How do I backup my website?
+                      What kind of support is included?
                     </div>
                     <div class="accordion-section-content" id="accordion-b-6">
                       <p>
-                        At vero eos et accusamus et iusto odio dignissimos
-                        ducimus qui blanditiis praesentium voluptatum deleniti
-                        atque corrupti quos dolores et quas molestias excepturi
-                        sint occaecati cupiditate non provident, similique sunt
-                        in culpa qui officia deserunt mollitia animi, id est
-                        laborum et dolorum fuga. Et harum quidem rerum facilis
-                        est et expedita distinctio.
+                        The Web Builder includes a comprehensive Help Centre with videos, 
+                        tutorials, and on-screen guides. It’s intuitive and easy to use, 
+                        but if you have a specific question or need further help, 
+                        please contact our support team via your control panel.
                       </p>
                     </div>
                   </div>
