website section completed

--- a/website-builder.html
+++ b/website-builder.html
@@ -342,8 +342,7 @@
                 <div class="text-center">
                   <h2>200+ Professionally Designed Website Templates</h2>
                   <p class="lead">
-                    Sit labore et officia eiusmod tempor officia eiusmod dolor
-                    exercitation nulla dolore ut id velit et ut anim.
+                    Elevate your online presence effortlessly with our 200+ professionally crafted website templates. Choose, customize, and shine in the digital landscape.
                   </p>
                   <div class="spacer-20"></div>
                 </div>
@@ -398,24 +397,27 @@
                 <i class="icon-alarmclock de-icon mb20"></i>
                 <h4>Simple Customization</h4>
                 <p>
-                  Aliquip consequat excepteur non dolor irure ad irure labore ex
-                  eiusmod est duis culpa ex ut minim ut ea.
+                  Tailor your experience effortlessly with our 'Simple 
+                  Customization' feature. Customize your settings 
+                  and preferences with ease, making it uniquely yours
                 </p>
               </div>
               <div class="col-md-3">
                 <i class="icon-refresh de-icon mb20"></i>
                 <h4>Drag-and-Drop Builder</h4>
                 <p>
-                  Aliquip consequat excepteur non dolor irure ad irure labore ex
-                  eiusmod est duis culpa ex ut minim ut ea.
+                  Create stunning websites effortlessly with our intuitive 
+                  drag-and-drop builder. No coding skills required—design 
+                  your dream site with ease
                 </p>
               </div>
               <div class="col-md-3">
                 <i class="icon-layers de-icon mb20"></i>
                 <h4>Huge Design Library</h4>
                 <p>
-                  Aliquip consequat excepteur non dolor irure ad irure labore ex
-                  eiusmod est duis culpa ex ut minim ut ea.
+                  Unlock boundless creativity with our vast design library. 
+                  Discover an endless array of templates and assets to bring 
+                  your vision to life.
                 </p>
               </div>
             </div>
@@ -436,52 +438,36 @@
                         <div
                           class="accordion-section-title"
                           data-tab="#accordion-1">
-                          How do I get started with web hosting?
+                          Do I need a domain name and web hosting with you to use the Website Builder?
                         </div>
                         <div class="accordion-section-content" id="accordion-1">
                           <p>
-                            At vero eos et accusamus et iusto odio dignissimos
-                            ducimus qui blanditiis praesentium voluptatum
-                            deleniti atque corrupti quos dolores et quas
-                            molestias excepturi sint occaecati cupiditate non
-                            provident, similique sunt in culpa qui officia
-                            deserunt mollitia animi, id est laborum et dolorum
-                            fuga. Et harum quidem rerum facilis est et expedita
-                            distinctio.
+                            Yes, you’ll need to purchase a web hosting package from us if you don’t already 
+                            have one. You also need a domain name; we recommend registering or transferring 
+                            your domain to us where possible for a seamless experience.
+                            Take a look at our Web Hosting and Domain Names pages for more details.
                           </p>
                         </div>
                         <div
                           class="accordion-section-title"
                           data-tab="#accordion-2">
-                          What is difference for each plan?
+                          How do I access the Website Builder?
                         </div>
                         <div class="accordion-section-content" id="accordion-2">
                           <p>
-                            At vero eos et accusamus et iusto odio dignissimos
-                            ducimus qui blanditiis praesentium voluptatum
-                            deleniti atque corrupti quos dolores et quas
-                            molestias excepturi sint occaecati cupiditate non
-                            provident, similique sunt in culpa qui officia
-                            deserunt mollitia animi, id est laborum et dolorum
-                            fuga. Et harum quidem rerum facilis est et expedita
-                            distinctio.
+                            Once you’ve purchased a hosting package, log in to your control panel and go 
+                            to ‘Web Builder’. From here you can access everything you need to build your 
+                            website.
                           </p>
                         </div>
                         <div
                           class="accordion-section-title"
                           data-tab="#accordion-3">
-                          What kind of web hosting do I need?
+                          Can I back up my website?
                         </div>
                         <div class="accordion-section-content" id="accordion-3">
                           <p>
-                            At vero eos et accusamus et iusto odio dignissimos
-                            ducimus qui blanditiis praesentium voluptatum
-                            deleniti atque corrupti quos dolores et quas
-                            molestias excepturi sint occaecati cupiditate non
-                            provident, similique sunt in culpa qui officia
-                            deserunt mollitia animi, id est laborum et dolorum
-                            fuga. Et harum quidem rerum facilis est et expedita
-                            distinctio.
+                            You can download backups of your website whenever you like straight from your control panel.
                           </p>
                         </div>
                       </div>
@@ -500,52 +486,42 @@
                           class="accordion-section-content"
                           id="accordion-b-4">
                           <p>
-                            At vero eos et accusamus et iusto odio dignissimos
-                            ducimus qui blanditiis praesentium voluptatum
-                            deleniti atque corrupti quos dolores et quas
-                            molestias excepturi sint occaecati cupiditate non
-                            provident, similique sunt in culpa qui officia
-                            deserunt mollitia animi, id est laborum et dolorum
-                            fuga. Et harum quidem rerum facilis est et expedita
-                            distinctio.
+                            A domain name serves as your unique online address, making it easier 
+                            for visitors to find and remember your website. It adds professionalism 
+                            to your online presence and helps establish your brand identity. 
+                            Without a domain, your website would be identified by a lengthy and 
+                            complex IP address, making it less user-friendly and memorable. 
+                            In short, a domain name is essential for creating a credible and 
+                            accessible online presence for your website or business.
                           </p>
                         </div>
                         <div
                           class="accordion-section-title"
                           data-tab="#accordion-b-5">
-                          What my website protected from hackers?
+                          Do I need to know how to code to use the Website Builder?
                         </div>
                         <div
                           class="accordion-section-content"
                           id="accordion-b-5">
                           <p>
-                            At vero eos et accusamus et iusto odio dignissimos
-                            ducimus qui blanditiis praesentium voluptatum
-                            deleniti atque corrupti quos dolores et quas
-                            molestias excepturi sint occaecati cupiditate non
-                            provident, similique sunt in culpa qui officia
-                            deserunt mollitia animi, id est laborum et dolorum
-                            fuga. Et harum quidem rerum facilis est et expedita
-                            distinctio.
+                            Not at all; everything is drag-and-drop or easily editable in a 
+                            few clicks. If you’re comfortable with HTML, CSS, and/or JavaScript, 
+                            you can edit and add code as you wish - but that’s completely optional.
                           </p>
                         </div>
                         <div
                           class="accordion-section-title"
                           data-tab="#accordion-b-6">
-                          How do I backup my website?
+                          What kind of support is included?
                         </div>
                         <div
                           class="accordion-section-content"
                           id="accordion-b-6">
                           <p>
-                            At vero eos et accusamus et iusto odio dignissimos
-                            ducimus qui blanditiis praesentium voluptatum
-                            deleniti atque corrupti quos dolores et quas
-                            molestias excepturi sint occaecati cupiditate non
-                            provident, similique sunt in culpa qui officia
-                            deserunt mollitia animi, id est laborum et dolorum
-                            fuga. Et harum quidem rerum facilis est et expedita
-                            distinctio.
+                            The Web Builder includes a comprehensive Help Centre with videos, 
+                            tutorials, and on-screen guides. It’s intuitive and easy to use, 
+                            but if you have a specific question or need further help, 
+                            please contact our support team via your control panel.
                           </p>
                         </div>
                       </div>
