--- a/help.html
+++ b/help.html
@@ -346,32 +346,33 @@
                 <i class="icon-alarmclock de-icon mb20"></i>
                 <h4>Getting Started</h4>
                 <p>
-                  Aliquip consequat excepteur non dolor irure ad irure labore
-                  ex.
+                  Getting started is a breeze with our user-friendly platform. Experience 
+                  a seamless onboarding process and launch your online journey effortlessly.
                 </p>
               </div>
               <div class="col-md-3 text-center">
                 <i class="icon-refresh de-icon mb20"></i>
                 <h4>Announcements</h4>
                 <p>
-                  Aliquip consequat excepteur non dolor irure ad irure labore
-                  ex.
+                  Stay informed and connected with our 'Announcements' feature. Receive 
+                  timely updates, news, and important information directly from our team.
                 </p>
               </div>
               <div class="col-md-3 text-center">
                 <i class="icon-layers de-icon mb20"></i>
                 <h4>Account / Billing</h4>
                 <p>
-                  Aliquip consequat excepteur non dolor irure ad irure labore
-                  ex.
+                  Simplify your account and billing management with our user-friendly platform. 
+                  Easily track invoices, payments, and subscription details for a 
+                  hassle-free experience.
                 </p>
               </div>
               <div class="col-md-3 text-center">
                 <i class="icon-cloud de-icon mb20"></i>
                 <h4>Technical</h4>
                 <p>
-                  Aliquip consequat excepteur non dolor irure ad irure labore
-                  ex.
+                  Experience the pinnacle of technical excellence with our cutting-edge features. 
+                  We empower your digital journey with innovation and precision.
                 </p>
               </div>
             </div>
@@ -384,8 +385,8 @@
               <div class="col-lg-6 offset-lg-3 text-center">
                 <h2>Search at popular topics.</h2>
                 <p class="lead">
-                  Sit labore et officia eiusmod tempor officia eiusmod dolor
-                  exercitation nulla dolore ut id velit et ut anim.
+                  Explore trending topics effortlessly with our 'Search at Popular Topics' feature. 
+                  Stay informed and discover what's making waves online in seconds
                 </p>
               </div>
               <div class="col-md-6">
